--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "firebase": "^9.6.7",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
-    "react-navigation": "4.4.4"
+    "react-navigation": "4.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
