--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/auth": "^14.5.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "add": "^2.0.6",
     "firebase": "^9.6.7",
     "formik": "^2.2.9",
     "react": "17.0.2",
