--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/firestore": "^14.5.1",
+    "@react-native-firebase/storage": "^14.5.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "add": "^2.0.6",
