--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-google-signin": "2.1.1",
+    "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
